LIVE-310 Blurred chat input on close of overlay and on send message, fixed orientation setting function and input box styling

--- a/www/app/stylus/components/_chat.styl
+++ b/www/app/stylus/components/_chat.styl
@@ -31,6 +31,7 @@
         border: 1px solid black;
         border-radius: 5px;
         color: white;
+        z-index: 2000;
 
         &:focus {
             color: #333;
@@ -48,6 +49,7 @@
         background: transparent;
         color: white;
         border: none;
+        z-index: 2000;
     }
 
     .chat-title {
